# charwidth

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  docs.yml  test.macos.apple_clang.yml  test.ubuntu.gcc.yml  test.windows.mingw64.gcc.yml  test.windows.msvc.yml
cmake/base/: share.cmake
cmake/lib/: CMakeLists.txt  charwidth-config.cmake
cmake/test_c11/: CMakeLists.txt
cmake/test_c90/: CMakeLists.txt
cmake/test_c99/: CMakeLists.txt
cmake/test_cpp11/: CMakeLists.txt
cmake/test_cpp17/: CMakeLists.txt
cmake/test_cpp98/: CMakeLists.txt
docs/: mkdocs.yml  requirements.txt
docs/docs/: build_and_install.md  index.md
docs/docs/_data/: extra.css
docs/docs/api/: header_file.md  macro.md
docs/docs/api/c/: CW_CharWidth.md  CW_SetVersion.md  CW_TreatAmbiguousAsNarrow.md  CW_TreatAmbiguousAsWide.md  type.md
docs/docs/api/cpp/: CharWidth.md  SetVersion.md  TreatAmbiguousAsNarrow.md  TreatAmbiguousAsWide.md  type.md
docs/docs/usage/c/: c90.md  c99.md
docs/docs/usage/cpp/: cpp11.md  cpp17.md  cpp98.md
src/: charwidth_c11.h  charwidth_c90.h  charwidth_c99.h  charwidth_cpp11.h  charwidth_cpp17.h  charwidth_cpp98.h  def.h  type_c90.h  type_c99.h
src/10.0.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/11.0.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/12.0.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/12.1.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/13.0.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/14.0.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/15.0.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/15.1.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/16.0.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/17.0.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/7.0.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/8.0.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
src/9.0.0/: c90.h  c99.h  cpp11.h  cpp17.h  cpp98.h
test/: s_c.h  s_cpp.h  test_c11.c  test_c90.c  test_c99.c  test_cpp11.cpp  test_cpp17.cpp  test_cpp98.cpp
